[tool.poetry]
name = "pysnmp-mibs"
version = "1.15.25-beta.1"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "BSD-2-Clause"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pysnmp-pysmi = "^1.1.12"
pyyaml = { version = "!=6.0.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
